--- a/index.html
+++ b/index.html
@@ -167,33 +167,51 @@
       });
 
     document.getElementById('agreeCheck').addEventListener('change', function () {
-      document.getElementById('submitBtn').disabled = !this.checked;
+      const submitBtn = document.getElementById('submitBtn');
+      submitBtn.disabled = !this.checked;
+
+      if (this.checked) {
+        // ✅ 立刻檢查所有欄位，有錯就彈出提示
+        const form = document.getElementById('drawForm');
+        if (!form.checkValidity()) {
+          form.reportValidity(); // << 關鍵
+        }
+      }
     });
 
-    document.addEventListener("DOMContentLoaded", () => {
+    document.getElementById('drawForm').addEventListener('submit', async function (e) {
+      e.preventDefault();
+
       const form = document.getElementById('drawForm');
-      const fields = form.querySelectorAll('input[required]');
+      if (!form.checkValidity()) return; // ✅ 不重複顯示，因為錯誤提示在 checkbox 勾選時已處理
 
-      // 加入繁體中文錯誤提示
-      fields.forEach(field => {
-        field.addEventListener('invalid', function (e) {
-          e.preventDefault();
-          if (!field.validity.valid) {
-            if (field.type === 'email') {
-              field.setCustomValidity('請輸入有效的電郵地址');
-            } else if (field.type === 'tel') {
-              field.setCustomValidity('請輸入電話號碼');
-            } else {
-              field.setCustomValidity('此為必填欄位');
-            }
-          }
-        });
+      const email = document.getElementById('email').value.toLowerCase();
+      const data = {
+        firstName: document.getElementById('firstName').value,
+        lastName: document.getElementById('lastName').value,
+        phone: document.getElementById('phone').value,
+        email: email,
+        status: "New",
+        createdate: firebase.firestore.Timestamp.now(),
+        timestamp: new Date().toISOString()
+      };
 
-        field.addEventListener('input', function () {
-          field.setCustomValidity('');
-        });
-      });
+      try {
+        const snapshot = await db.collection("registrations").where("email", "==", email).get();
+        if (!snapshot.empty) {
+          alert("此電郵地址已參加過活動，請勿重複提交。");
+          return;
+        }
+
+        await db.collection("registrations").add(data);
+        form.style.display = 'none';
+        document.getElementById('thankYou').style.display = 'block';
+      } catch (err) {
+        console.error("提交時錯誤:", err);
+        alert("提交失敗，請稍後再試。");
+      }
     });
+
 
     document.getElementById('drawForm').addEventListener('submit', async function (e) {
       e.preventDefault();
