put first name and last name in one row

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 
       <form id="drawForm">
         <div class="row">
-          <div class="mb-3 col-12 col-md-6">
+          <div class="mb-3 col-6">
             <label class="form-label">名字</label>
             <input type="text" class="form-control" id="firstName" required placeholder="請輸入名字">
           </div>
-          <div class="mb-3 col-12 col-md-6">
+          <div class="mb-3 col-6">
             <label class="form-label">姓氏</label>
             <input type="text" class="form-control" id="lastName" required placeholder="請輸入姓氏">
           </div>
