background image layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       position: fixed;
       top: 0; left: 0;
       width: 100%;
-      height: 100%;
+      height: 400px;
       background: url('images/ekinform4.jpg') no-repeat center top fixed;
       background-size: 95% auto;
       z-index: 0;
