--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       content: "";
       position: fixed;
       top: 0; left: 0;
-      width: 100%;
-      height: 400px;
+      width: 400px;
+      height: 100%;
       background: url('images/ekinform4.jpg') no-repeat center top fixed;
       background-size: 95% auto;
       z-index: 0;
