--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       background-color: black;
       font-family: 'Segoe UI', sans-serif;
     }
+    body {
+      width: 420px;
+      margin: 0 auto;
+      overflow-x: hidden;
+    }
     body::before {
       content: "";
       position: fixed;
