--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
       background-color: black;
       font-family: 'Segoe UI', sans-serif;
     }
-    body {
-      width: 420px;
-      margin: 0 auto;
-      overflow-x: hidden;
-    }
     body::before {
       content: "";
       position: fixed;
@@ -30,6 +25,14 @@
       opacity: 0;
       filter: brightness(2);
       animation: fadeInBright 2.5s ease-out forwards;
+    }
+    @media (min-width: 768px) {
+      body::before {
+        width: 100%;
+        height: 400px;
+        background-size: cover;
+        background-position: center top;
+      }
     }
     @keyframes fadeInBright {
       0%   { opacity: 0; filter: brightness(2); }
