--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     body::before {
       content: "";
       position: fixed;
-      top: 0; left: 0;
+      top: 0;
+      left: 50%;
+      transform: translateX(-210px); /* 把 420px 圖片往左移一半，讓它置中 */
       width: 420px;
       height: 660px;
-      background: url('images/ekinform4.jpg') no-repeat center top fixed;
+      background: url('images/ekinform4.jpg') no-repeat center top;
       background-size: 95% auto;
       z-index: 0;
       opacity: 0;
@@ -28,8 +30,8 @@
     }
     @media (min-width: 768px) {
       body::before {
-        width: 100%;
-        height: 400px;
+        width: 420;
+        height: 700px;
         background-size: cover;
         background-position: center top;
       }
