--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
         background-position: center top;
       }
     }
+    @media (min-width: 768px) {
+      .form-container {
+        width: 420px;
+        margin: 0 auto;
+        left: unset;
+        right: unset;
+      }
+    }
     @keyframes fadeInBright {
       0%   { opacity: 0; filter: brightness(2); }
       50%  { opacity: 1; filter: brightness(1.5); }
