--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
     @media (min-width: 768px) {
       body::before {
-        width: 420;
+        width: 420px;
         height: 720px;
         background-size: cover;
         background-position: center top;
@@ -39,9 +39,11 @@
     @media (min-width: 768px) {
       .form-container {
         width: 420px;
-        margin: 0 auto;
-        left: unset;
-        right: unset;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+        position: fixed;
       }
     }
     @keyframes fadeInBright {
@@ -106,7 +108,8 @@
 </head>
 <body>
 
-  <div id="formContainer" class="form-container container">
+  
+  <div id="formContainer" class="form-container">
     <!-- Toggle Arrow -->
     <div class="arrow-toggle" onclick="toggleForm()">
       <svg id="chevronIcon" class="chevron-svg rotate-down" viewBox="0 0 24 24">
