update game description

--- a/accordionDetails.html
+++ b/accordionDetails.html
@@ -1,18 +1,21 @@
-<!-- accordionDetails.html -->
 <div class="accordion mb-3" id="accordionDetails">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-        👉 查看抽獎活動詳情
+        👉 查看抽獎活動詳情 / View Lucky Draw Details
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionDetails">
       <div class="accordion-body">
         <ul>
-          <li>地點：The Theatre at Great Canadian Toronto</li>
-          <li>日期：2025年6月28日 晚上8:00</li>
-          <li>獎品：鄭伊健親筆簽名演唱會海報</li>
-          <li>截止日期：2025年6月15日</li>
+          <li><strong>報名方式 / Application Method：</strong>透過線上報名表格進行。This lucky draw is open for registration through an online application form.</li>
+          <li><strong>開放時間 / Registration Start Date：</strong>2025年6月23日開放，連結將於社交媒體平台公告。Form will open on June 23, 2025, and the link will be shared via social media.</li>
+          <li><strong>所需資料 / Required Information：</strong>名字、姓氏、電話、電郵。Participants must provide first name, last name, phone number, and email.</li>
+          <li><strong>抽獎時間 / Draw Time：</strong>2025年6月28日 晚上8點（線上抽獎）。Draw will be conducted online on June 28, 2025, at 8:00 PM.</li>
+          <li><strong>獎品 / Prize：</strong>鄭伊健親筆簽名海報，共5位幸運得獎者。Five winners will receive an Ekin Cheng signed concert poster.</li>
+          <li><strong>通知方式 / Notification：</strong>將透過電話及電郵通知得獎者。Winners will be contacted via phone and email.</li>
+          <li><strong>主辦單位 / Organizer：</strong>Greater Bay Group（<a href="https://greaterbaygroup.com" target="_blank">greaterbaygroup.com</a>）</li>
+          <li><strong>查詢電郵 / Contact Email：</strong><a href="mailto:info@greaterbaygroup.com">info@greaterbaygroup.com</a></li>
         </ul>
       </div>
     </div>
