--- a/accordionDetails.html
+++ b/accordionDetails.html
@@ -1,23 +1,82 @@
-<div class="accordion mb-3" id="accordionDetails">
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-        👉 查看抽獎活動詳情 / View Lucky Draw Details
-      </button>
-    </h2>
-    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionDetails">
-      <div class="accordion-body">
-        <ul>
-          <li><strong>報名方式 / Application Method：</strong>透過線上報名表格進行。This lucky draw is open for registration through an online application form.</li>
-          <li><strong>開放時間 / Registration Start Date：</strong>2025年6月23日開放，連結將於社交媒體平台公告。Form will open on June 23, 2025, and the link will be shared via social media.</li>
-          <li><strong>所需資料 / Required Information：</strong>名字、姓氏、電話、電郵。Participants must provide first name, last name, phone number, and email.</li>
-          <li><strong>抽獎時間 / Draw Time：</strong>2025年6月28日 晚上8點（線上抽獎）。Draw will be conducted online on June 28, 2025, at 8:00 PM.</li>
-          <li><strong>獎品 / Prize：</strong>鄭伊健親筆簽名海報，共5位幸運得獎者。Five winners will receive an Ekin Cheng signed concert poster.</li>
-          <li><strong>通知方式 / Notification：</strong>將透過電話及電郵通知得獎者。Winners will be contacted via phone and email.</li>
-          <li><strong>主辦單位 / Organizer：</strong>Greater Bay Group（<a href="https://greaterbaygroup.com" target="_blank">greaterbaygroup.com</a>）</li>
-          <li><strong>查詢電郵 / Contact Email：</strong><a href="mailto:info@greaterbaygroup.com">info@greaterbaygroup.com</a></li>
-        </ul>
+<!-- disclaimerModal.html -->
+<div class="modal fade" id="disclaimerModal" tabindex="-1">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content bg-light text-dark">
+      <div class="modal-header">
+        <h5 class="modal-title">抽獎活動詳情與免責聲明 / Lucky Draw Details & Disclaimer</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="關閉 / Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="disclaimer-box">
+          <p><strong>Application Method 報名方式</strong><br>
+            This lucky draw will be conducted through an online application form.<br>
+            此抽獎活動將以線上報名表格的方式進行。
+          </p>
+
+          <p><strong>Registration Period 報名日期</strong><br>
+            The online form will open on June 23, 2025, and the registration link will be shared through our social media platforms.<br>
+            報名表將於 2025年6月23日 起開放，報名連結將透過我們的社交媒體平台發布。
+          </p>
+
+          <p><strong>Required Information 所需資料</strong><br>
+            Participants must provide their First Name, Last Name, Phone Number, and Email Address.<br>
+            參加者需提供 名字、姓氏、聯絡電話 及 電郵地址。
+          </p>
+
+          <p><strong>Draw Date 抽獎日期</strong><br>
+            The lucky draw will be conducted online on June 28, 2025, at 8:00 PM.<br>
+            抽獎將於 2025年6月28日晚上8時 透過線上方式進行。
+          </p>
+
+          <p><strong>Prize 獎品</strong><br>
+            Each of the 5 winners will receive a poster personally signed by Ekin Cheng.<br>
+            將送出 5張鄭伊健親筆簽名海報，每位中獎者可獲得一張。
+          </p>
+
+          <p><strong>Notification 通知方式</strong><br>
+            Winners will be contacted via phone and email using the contact details they provided.<br>
+            主辦方將透過參加者所填寫的 電話及電郵 聯絡中獎者。
+          </p>
+
+          <p><strong>Organizer 主辦單位</strong><br>
+            This event is organized by Greater Bay Group (<a href="https://greaterbaygroup.com" target="_blank">greaterbaygroup.com</a>).<br>
+            本次活動由 Greater Bay Group（greaterbaygroup.com） 主辦。
+          </p>
+
+          <p><strong>Contact 查詢方式</strong><br>
+            For any inquiries, please contact <a href="mailto:info@greaterbaygroup.com">info@greaterbaygroup.com</a>.<br>
+            如有任何查詢，請電郵至 <a href="mailto:info@greaterbaygroup.com">info@greaterbaygroup.com</a> 聯絡主辦單位。
+          </p>
+
+          <hr>
+
+          <p><strong>Disclaimer 免責聲明</strong><br>
+            This lucky draw is organized for promotional purposes only.<br>
+            本抽獎活動純為推廣用途而設。
+          </p>
+
+          <p>
+            The organizer reserves the right to verify participant information and disqualify any false entries.<br>
+            主辦方有權核實參加者資料，並取消虛假報名者資格。
+          </p>
+
+          <p>
+            Prizes are non-transferable and not redeemable for cash or other items.<br>
+            獎品不得兌換現金或其他物品，亦不得轉讓。
+          </p>
+
+          <p>
+            The organizer is not responsible for failure to contact winners due to incorrect information.<br>
+            如因資料錯誤導致無法聯絡得獎者，主辦單位將不負責。
+          </p>
+
+          <p>
+            By submitting the form, participants agree to all terms and accept the organizer's final decision.<br>
+            參加者一經提交表格，即表示同意所有條款，並接受主辦單位的最終決定。
+          </p>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
