--- a/accordionDetails.html
+++ b/accordionDetails.html
@@ -6,18 +6,59 @@
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionDetails">
-      <div class="accordion-body">
-        <ul>
-          <li><strong>報名方式 / Application Method：</strong>透過線上報名表格進行。This lucky draw is open for registration through an online application form.</li>
-          <li><strong>開放時間 / Registration Start Date：</strong>2025年6月23日開放，連結將於社交媒體平台公告。Form will open on June 23, 2025, and the link will be shared via social media.</li>
-          <li><strong>所需資料 / Required Information：</strong>名字、姓氏、電話、電郵。Participants must provide first name, last name, phone number, and email.</li>
-          <li><strong>抽獎時間 / Draw Time：</strong>2025年6月28日 晚上8點（線上抽獎）。Draw will be conducted online on June 28, 2025, at 8:00 PM.</li>
-          <li><strong>獎品 / Prize：</strong>鄭伊健親筆簽名海報，共5位幸運得獎者。Five winners will receive an Ekin Cheng signed concert poster.</li>
-          <li><strong>通知方式 / Notification：</strong>將透過電話及電郵通知得獎者。Winners will be contacted via phone and email.</li>
-          <li><strong>主辦單位 / Organizer：</strong>Greater Bay Group（<a href="https://greaterbaygroup.com" target="_blank">greaterbaygroup.com</a>）</li>
-          <li><strong>查詢電郵 / Contact Email：</strong><a href="mailto:info@greaterbaygroup.com">info@greaterbaygroup.com</a></li>
-        </ul>
-      </div>
+        <div class="table-responsive">
+          <table class="table table-bordered align-middle">
+            <thead class="table-light">
+              <tr>
+                <th style="width: 20%">項目</th>
+                <th>中文說明</th>
+                <th>English Description</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>報名方式<br>Application Method</td>
+                <td>此抽獎活動將以線上報名表格的方式進行。</td>
+                <td>This lucky draw will be conducted through an online application form.</td>
+              </tr>
+              <tr>
+                <td>報名日期<br>Registration Period</td>
+                <td>報名表將於 2025年6月23日 起開放，連結將透過我們的社交媒體平台發布。</td>
+                <td>The online form will open on June 23, 2025, and the registration link will be shared via social media.</td>
+              </tr>
+              <tr>
+                <td>所需資料<br>Required Information</td>
+                <td>參加者需提供 名字、姓氏、聯絡電話 及 電郵地址。</td>
+                <td>Participants must provide their First Name, Last Name, Phone Number, and Email Address.</td>
+              </tr>
+              <tr>
+                <td>抽獎日期<br>Draw Date</td>
+                <td>抽獎將於 2025年6月28日 晚上8時 透過線上方式進行。</td>
+                <td>The lucky draw will take place online on June 28, 2025, at 8:00 PM.</td>
+              </tr>
+              <tr>
+                <td>獎品<br>Prize</td>
+                <td>將送出 5 張鄭伊健親筆簽名海報，每位中獎者可獲得一張。</td>
+                <td>Each of the 5 winners will receive a poster personally signed by Ekin Cheng.</td>
+              </tr>
+              <tr>
+                <td>通知方式<br>Notification</td>
+                <td>主辦方將透過參加者所填寫的 電話及電郵 聯絡中獎者。</td>
+                <td>Winners will be contacted via phone and email using the provided details.</td>
+              </tr>
+              <tr>
+                <td>主辦單位<br>Organizer</td>
+                <td>本活動由 Greater Bay Group（greaterbaygroup.com）主辦。</td>
+                <td>This event is organized by Greater Bay Group (greaterbaygroup.com).</td>
+              </tr>
+              <tr>
+                <td>查詢方式<br>Contact</td>
+                <td>如有任何查詢，請電郵至 info@greaterbaygroup.com。</td>
+                <td>For inquiries, please contact info@greaterbaygroup.com.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
     </div>
   </div>
 </div>
