--- a/accordionDetails.html
+++ b/accordionDetails.html
@@ -7,44 +7,38 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionDetails">
         <div class="table-responsive">
-          <table class="table table-bordered align-middle">
-            <thead class="table-light">
-              <tr>
-                <th style="width: 20%">項目</th>
-                <th>說明</th>
-              </tr>
-            </thead>
+          <table class="table table-borderless align-middle">
             <tbody>
               <tr>
-                <td>報名方式</td>
+                <th style="width: 40%">報名方式</th>
                 <td>此抽獎活動將以線上報名表格的方式進行。</td>
               </tr>
               <tr>
-                <td>報名日期</td>
+                <th>報名日期</th>
                 <td>報名表將於 2025年6月23日 起開放，連結將透過我們的社交媒體平台發布。</td>
               </tr>
               <tr>
-                <td>所需資料</td>
+                <th>所需資料</th>
                 <td>參加者需提供 名字、姓氏、聯絡電話 及 電郵地址。</td>
               </tr>
               <tr>
-                <td>抽獎日期</td>
+                <th>抽獎日期</th>
                 <td>抽獎將於 2025年6月28日 晚上8時 透過線上方式進行。</td>
               </tr>
               <tr>
-                <td>獎品</td>
+                <th>獎品</th>
                 <td>將送出 5 張鄭伊健親筆簽名海報，每位中獎者可獲得一張。</td>
               </tr>
               <tr>
-                <td>通知方式</td>
+                <th>通知方式</th>
                 <td>主辦方將透過參加者所填寫的 電話及電郵 聯絡中獎者。</td>
               </tr>
               <tr>
-                <td>主辦單位</td>
+                <th>主辦單位</th>
                 <td>本活動由 Greater Bay Group（greaterbaygroup.com）主辦。</td>
               </tr>
               <tr>
-                <td>查詢方式</td>
+                <th>查詢方式</th>
                 <td>如有任何查詢，請電郵至 info@greaterbaygroup.com。</td>
               </tr>
             </tbody>
