--- a/accordionDetails.html
+++ b/accordionDetails.html
@@ -6,44 +6,42 @@
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionDetails">
-        <div class="table-responsive">
-          <table class="table table-borderless align-middle">
-            <tbody>
-              <tr>
-                <th style="width: 40%">報名方式</th>
-                <td>此抽獎活動將以線上報名表格的方式進行。</td>
-              </tr>
-              <tr>
-                <th>報名日期</th>
-                <td>報名表將於 2025年6月23日 起開放，連結將透過我們的社交媒體平台發布。</td>
-              </tr>
-              <tr>
-                <th>所需資料</th>
-                <td>參加者需提供 名字、姓氏、聯絡電話 及 電郵地址。</td>
-              </tr>
-              <tr>
-                <th>抽獎日期</th>
-                <td>抽獎將於 2025年6月28日 晚上8時 透過線上方式進行。</td>
-              </tr>
-              <tr>
-                <th>獎品</th>
-                <td>將送出 5 張鄭伊健親筆簽名海報，每位中獎者可獲得一張。</td>
-              </tr>
-              <tr>
-                <th>通知方式</th>
-                <td>主辦方將透過參加者所填寫的 電話及電郵 聯絡中獎者。</td>
-              </tr>
-              <tr>
-                <th>主辦單位</th>
-                <td>本活動由 Greater Bay Group（greaterbaygroup.com）主辦。</td>
-              </tr>
-              <tr>
-                <th>查詢方式</th>
-                <td>如有任何查詢，請電郵至 info@greaterbaygroup.com。</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+      <div class="modal-body">
+        <ol class="ps-3">
+          <li class="mb-2">
+            <strong>報名方式</strong><br>
+            <div class="ps-3">此抽獎活動將以線上報名表格的方式進行。</div>
+          </li>
+          <li class="mb-2">
+            <strong>報名日期</strong><br>
+            <div class="ps-3">報名表將於 2025年6月23日 起開放，連結將透過我們的社交媒體平台發布。</div>
+          </li>
+          <li class="mb-2">
+            <strong>所需資料</strong><br>
+            <div class="ps-3">參加者需提供 名字、姓氏、聯絡電話 及 電郵地址。</div>
+          </li>
+          <li class="mb-2">
+            <strong>抽獎日期</strong><br>
+            <div class="ps-3">抽獎將於 2025年6月28日 晚上8時 透過線上方式進行。</div>
+          </li>
+          <li class="mb-2">
+            <strong>獎品</strong><br>
+            <div class="ps-3">將送出 5 張鄭伊健親筆簽名海報，每位中獎者可獲得一張。</div>
+          </li>
+          <li class="mb-2">
+            <strong>通知方式</strong><br>
+            <div class="ps-3">主辦方將透過參加者所填寫的 電話及電郵 聯絡中獎者。</div>
+          </li>
+          <li class="mb-2">
+            <strong>主辦單位</strong><br>
+            <div class="ps-3">本活動由 Greater Bay Group（greaterbaygroup.com）主辦。</div>
+          </li>
+          <li class="mb-2">
+            <strong>查詢方式</strong><br>
+            <div class="ps-3">如有任何查詢，請電郵至 info@greaterbaygroup.com。</div>
+          </li>
+        </ol>
+      </div>
     </div>
   </div>
 </div>
