--- a/accordionDetails.html
+++ b/accordionDetails.html
@@ -7,38 +7,54 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionDetails">
       <div class="modal-body">
-        <ol class="ps-3">
-          <li class="mb-2">
-            <strong>報名方式</strong><br>
-            <div class="ps-3">此抽獎活動將以線上報名表格的方式進行。</div>
+        <ol class="ps-4">
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>報名方式</strong><br>
+              <span class="ps-4 d-block">此抽獎活動將以線上報名表格的方式進行。</span>
+            </div>
           </li>
-          <li class="mb-2">
-            <strong>報名日期</strong><br>
-            <div class="ps-3">報名表將於 2025年6月23日 起開放，連結將透過我們的社交媒體平台發布。</div>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>報名日期</strong><br>
+              <span class="ps-4 d-block">報名表將於 2025年6月23日 起開放，連結將透過我們的社交媒體平台發布。</span>
+            </div>
           </li>
-          <li class="mb-2">
-            <strong>所需資料</strong><br>
-            <div class="ps-3">參加者需提供 名字、姓氏、聯絡電話 及 電郵地址。</div>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>所需資料</strong><br>
+              <span class="ps-4 d-block">參加者需提供 名字、姓氏、聯絡電話 及 電郵地址。</span>
+            </div>
           </li>
-          <li class="mb-2">
-            <strong>抽獎日期</strong><br>
-            <div class="ps-3">抽獎將於 2025年6月28日 晚上8時 透過線上方式進行。</div>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>抽獎日期</strong><br>
+              <span class="ps-4 d-block">抽獎將於 2025年6月28日 晚上8時 透過線上方式進行。</span>
+            </div>
           </li>
-          <li class="mb-2">
-            <strong>獎品</strong><br>
-            <div class="ps-3">將送出 5 張鄭伊健親筆簽名海報，每位中獎者可獲得一張。</div>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>獎品</strong><br>
+              <span class="ps-4 d-block">將送出 5 張鄭伊健親筆簽名海報，每位中獎者可獲得一張。</span>
+            </div>
           </li>
-          <li class="mb-2">
-            <strong>通知方式</strong><br>
-            <div class="ps-3">主辦方將透過參加者所填寫的 電話及電郵 聯絡中獎者。</div>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>通知方式</strong><br>
+              <span class="ps-4 d-block">主辦方將透過參加者所填寫的 電話及電郵 聯絡中獎者。</span>
+            </div>
           </li>
-          <li class="mb-2">
-            <strong>主辦單位</strong><br>
-            <div class="ps-3">本活動由 Greater Bay Group（greaterbaygroup.com）主辦。</div>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>主辦單位</strong><br>
+              <span class="ps-4 d-block">本活動由 Greater Bay Group（greaterbaygroup.com）主辦。</span>
+            </div>
           </li>
-          <li class="mb-2">
-            <strong>查詢方式</strong><br>
-            <div class="ps-3">如有任何查詢，請電郵至 info@greaterbaygroup.com。</div>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>查詢方式</strong><br>
+              <span class="ps-4 d-block">如有任何查詢，請電郵至 info@greaterbaygroup.com。</span>
+            </div>
           </li>
         </ol>
       </div>
