--- a/accordionDetails.html
+++ b/accordionDetails.html
@@ -1,59 +1,59 @@
-<div class="accordion mb-3" id="accordionDetails">
+<div class="accordion mb-3" id="accordionDetails"> 
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-        👉 查看抽獎詳情
+        🟡 查看抽獎詳情
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionDetails">
-      <div class="modal-body">
-        <ol class="ps-5">
-          <li class="mb-4">
-            <div class="ps-4">
-              <strong class="ps-3">報名方式</strong><br>
-              <span class="ps-5 d-block">此抽獎活動將以線上報名表格的方式進行。</span>
+      <div class="accordion-body">
+        <ol class="ps-4 mb-0">
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>報名方式</strong>
+              <div class="ps-4">此抽獎活動將以線上報名表格的方式進行。</div>
             </div>
           </li>
-          <li class="mb-4">
-            <div class="ps-4">
-              <strong class="ps-3">報名日期</strong><br>
-              <span class="ps-5 d-block">報名表將於 2025年6月23日 起開放，連結將透過我們的社交媒體平台發布。</span>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>報名日期</strong>
+              <div class="ps-4">報名表將於 2025年6月23日 起開放，連結將透過我們的社交媒體平台發布。</div>
             </div>
           </li>
-          <li class="mb-4">
-            <div class="ps-4">
-              <strong class="ps-3">所需資料</strong><br>
-              <span class="ps-5 d-block">參加者需提供 名字、姓氏、聯絡電話 及 電郵地址。</span>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>所需資料</strong>
+              <div class="ps-4">參加者需提供 名字、姓氏、聯絡電話 及 電郵地址。</div>
             </div>
           </li>
-          <li class="mb-4">
-            <div class="ps-4">
-              <strong class="ps-3">抽獎日期</strong><br>
-              <span class="ps-5 d-block">抽獎將於 2025年6月28日 晚上8時 透過線上方式進行。</span>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>抽獎日期</strong>
+              <div class="ps-4">抽獎將於 2025年6月28日 晚上8時 透過線上方式進行。</div>
             </div>
           </li>
-          <li class="mb-4">
-            <div class="ps-4">
-              <strong class="ps-3">獎品</strong><br>
-              <span class="ps-5 d-block">將送出 5 張鄭伊健親筆簽名海報，每位中獎者可獲得一張。</span>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>獎品</strong>
+              <div class="ps-4">將送出 5 張鄭伊健親筆簽名海報，每位中獎者可獲得一張。</div>
             </div>
           </li>
-          <li class="mb-4">
-            <div class="ps-4">
-              <strong class="ps-3">通知方式</strong><br>
-              <span class="ps-5 d-block">主辦方將透過參加者所填寫的 電話及電郵 聯絡中獎者。</span>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>通知方式</strong>
+              <div class="ps-4">主辦方將透過參加者所填寫的 電話及電郵 聯絡中獎者。</div>
             </div>
           </li>
-          <li class="mb-4">
-            <div class="ps-4">
-              <strong class="ps-3">主辦單位</strong><br>
-              <span class="ps-5 d-block">本活動由 Greater Bay Group（greaterbaygroup.com）主辦。</span>
+          <li class="mb-3">
+            <div class="ps-3">
+              <strong>主辦單位</strong>
+              <div class="ps-4">本活動由 Greater Bay Group（greaterbaygroup.com）主辦。</div>
             </div>
           </li>
-          <li class="mb-4">
-            <div class="ps-4">
-              <strong class="ps-3">查詢方式</strong><br>
-              <span class="ps-5 d-block">如有任何查詢，請電郵至 info@greaterbaygroup.com。</span>
+          <li>
+            <div class="ps-3">
+              <strong>查詢方式</strong>
+              <div class="ps-4">如有任何查詢，請電郵至 info@greaterbaygroup.com。</div>
             </div>
           </li>
         </ol>
@@ -61,3 +61,4 @@
     </div>
   </div>
 </div>
+
