--- a/disclaimerModal.html
+++ b/disclaimerModal.html
@@ -1,13 +1,13 @@
-
-<div class="modal fade" id="disclaimerModal" tabindex="-1"> 
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingDisclaimer">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDisclaimer">
-        ⚠️ 查看免責聲明
-      </button>
-    </h2>
-    <div id="collapseDisclaimer" class="accordion-collapse collapse" data-bs-parent="#accordionDisclaimer">
-      <div class="accordion-body">
+<!-- disclaimerModal.html -->
+<div class="modal fade" id="disclaimerModal" tabindex="-1">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content bg-light text-dark">
+      <div class="modal-header">
+        <h5 class="modal-title">抽獎活動條款</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="關閉"></button>
+      </div>
+      <div class="modal-body">
+        <div class="disclaimer-box">
         <ol class="ps-4 mb-0">
           <li class="mb-3">
             <div class="ps-3">
@@ -40,8 +40,10 @@
             </div>
           </li>
         </ol>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
 
