--- a/disclaimerModal.html
+++ b/disclaimerModal.html
@@ -7,43 +7,44 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="關閉"></button>
       </div>
       <div class="modal-body">
-        <div class="disclaimer-box">
-        <ol class="ps-4 mb-0">
-          <li class="mb-3">
-            <div class="ps-3">
-              <strong>活動目的</strong>
-              <div class="ps-4">本抽獎活動之舉辦僅為推廣活動，無需購買產品或付款即可參加。</div>
-            </div>
-          </li>
-          <li class="mb-3">
-            <div class="ps-3">
-              <strong>參加資格</strong>
-              <div class="ps-4">參加者須為年滿18歲之加拿大居民。主辦單位有權要求提供年齡或居住證明。</div>
-            </div>
-          </li>
-          <li class="mb-3">
-            <div class="ps-3">
-              <strong>資料使用</strong>
-              <div class="ps-4">參加者所提供之個人資料僅用於抽獎及通知用途，不會作其他商業用途。</div>
-            </div>
-          </li>
-          <li class="mb-3">
-            <div class="ps-3">
-              <strong>獎品更動</strong>
-              <div class="ps-4">如遇不可抗力，主辦單位保留更改獎品或活動內容之權利，恕不另行通知。</div>
-            </div>
-          </li>
-          <li>
-            <div class="ps-3">
-              <strong>最終解釋權</strong>
-              <div class="ps-4">本活動一切相關事宜，以主辦單位最終解釋為準。</div>
-            </div>
-          </li>
-        </ol>
+        <div class="disclaimer-box bg-light ps-3 pe-3 pt-3 pb-1 rounded">
+          <ol class="ps-4 mb-0">
+            <li class="mb-3">
+              <div class="ps-3">
+                <strong>活動目的</strong>
+                <div class="ps-4">本抽獎活動之舉辦僅為推廣活動，無需購買產品或付款即可參加。</div>
+              </div>
+            </li>
+            <li class="mb-3">
+              <div class="ps-3">
+                <strong>參加資格</strong>
+                <div class="ps-4">參加者須為年滿18歲之加拿大居民。主辦單位有權要求提供年齡或居住證明。</div>
+              </div>
+            </li>
+            <li class="mb-3">
+              <div class="ps-3">
+                <strong>資料使用</strong>
+                <div class="ps-4">參加者所提供之個人資料僅用於抽獎及通知用途，不會作其他商業用途。</div>
+              </div>
+            </li>
+            <li class="mb-3">
+              <div class="ps-3">
+                <strong>獎品更動</strong>
+                <div class="ps-4">如遇不可抗力，主辦單位保留更改獎品或活動內容之權利，恕不另行通知。</div>
+              </div>
+            </li>
+            <li>
+              <div class="ps-3">
+                <strong>最終解釋權</strong>
+                <div class="ps-4">本活動一切相關事宜，以主辦單位最終解釋為準。</div>
+              </div>
+            </li>
+          </ol>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 
 
